# CLI-Framework

./: .gitmodules  CMakeLists.txt  README.md  os_env.cmake
inc/: CommandAdaptor.h  Descriptions.h  ICommand.h  Options.h  Utilities.hpp
plan/: feature 1.ppt
src/: CommandAdaptor.cpp  Descriptions.cpp  Options.cpp
utest/: CMakeLists.txt
utest/inc/: setup.h
utest/src/: main.cpp
utest/test/: T_Command.cpp  T_CommandAdaptor.cpp  T_Descriptions.cpp  T_Options.cpp  T_Utilities.cpp
